mise en place de l'effect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
 <h1>Hey</h1>
+<button (click)="ChangeNameWhenButtonClick()">change de prenom</button>
+<!-- <div>{{(actualState | async)?.root?.user?.prenom}}</div> -->
